infra/presister/presister_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presister
spec:
  selector:
    app: presister
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
