infra/presister/presister-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: presister
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: presister
  port:
    targetPort: 8003
  tls:
    termination: edge
